--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4acaaa21-9d23-42ba-b059-65da0c804a8e",
    "metadata": {},
    "outputs": [],
@@ -32,27 +32,50 @@
     "\n",
     "# ignore Depreca python function file \n",
     "%run ../src/cleaning.py\n",
-    "​\n",
+    "\n",
     "# ignore DeprecationWarning Error Messages\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "ationWarning Error Messages\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "31bad3ce-889b-45fe-ad6e-69ff0f0930ef",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">The shape of the ORGINAL data is <span style=\"font-weight: bold\">(</span>row, column<span style=\"font-weight: bold\">)</span>: <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">180519</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">53</span><span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "The shape of the ORGINAL data is \u001b[1m(\u001b[0mrow, column\u001b[1m)\u001b[0m: \u001b[1m(\u001b[0m\u001b[1;36m180519\u001b[0m, \u001b[1;36m53\u001b[0m\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The shape of the ORGINAL data is (row, column): (180519, 53)\n",
-      "\n",
       "Profiling datasets\n",
       "                        Attribute            Type  Num. Missing Values  Num. Unique Values            Sknewness   Kurtosis\n",
       "0        Days for shipping (real)           int64                    0                   7             0.084771  -1.007919\n",
@@ -105,8 +128,26 @@
       "47                  Product Image          object                    0                 118                  N/A        N/A\n",
       "48                   Product Name          object                    0                 118                  N/A        N/A\n",
       "49     shipping date (DateOrders)  datetime64[ns]                    0               63701                  N/A        N/A\n",
-      "50                  Shipping Mode          object                    0                   4                  N/A        N/A\n",
-      "The shape of the AFTER data is (row, column): (180519, 51)\n",
+      "50                  Shipping Mode          object                    0                   4                  N/A        N/A\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">The shape of the AFTER data is <span style=\"font-weight: bold\">(</span>row, column<span style=\"font-weight: bold\">)</span>: <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">180519</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">51</span><span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "The shape of the AFTER data is \u001b[1m(\u001b[0mrow, column\u001b[1m)\u001b[0m: \u001b[1m(\u001b[0m\u001b[1;36m180519\u001b[0m, \u001b[1;36m51\u001b[0m\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 180519 entries, 0 to 180518\n",
       "Data columns (total 51 columns):\n",
@@ -208,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "fc17439d-cba4-4032-a3de-3c6710c4d409",
    "metadata": {},
    "outputs": [
@@ -341,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "622d93ea-7e52-4ea0-8a21-8a1b6c1cfeec",
    "metadata": {},
    "outputs": [
@@ -561,7 +602,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +613,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "id": "c03b364b-a67a-4a0d-b990-146ff725498d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([180517, 179254, 179253, ...,  65129,  65126,  65113], dtype=int64)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.order_item_id.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5f7632a8-26bb-47c4-a6d4-d5b9f1e3021b",
    "metadata": {},
    "outputs": [],
@@ -590,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ce9063bf-f135-4400-8337-ccb23164fda9",
    "metadata": {},
    "outputs": [
@@ -742,7 +804,7 @@
        "4      :  total sales per customer made per customer  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3b73f4bb-aa7f-43e0-b7a2-3f622571d68f",
    "metadata": {},
    "outputs": [
@@ -997,7 +1059,7 @@
        "4  /department/fan%20shop/category/water%20sports...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,6 +1103,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8feb33b4-4c44-45b1-a31a-37f0d99389c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "908b4856-5854-40dd-a8ed-9400411dced4",
    "metadata": {},
    "outputs": [],
    "source": []
