added interactive html notebook

--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -5,7 +5,9 @@
    "id": "d0132cdb-4ece-4c79-902b-8a79c9b147e2",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:#ffc0cb;font-size:70px;font-family:Georgia;text-align:center;\"><strong>DataCo SMART SUPPLY CHAIN</strong></h1>"
+    "<h1 style=\"color:#ffc0cb;font-size:70px;font-family:Georgia;text-align:center;\"><strong>DataCo SMART SUPPLY CHAIN</strong></h1>\n",
+    "\n",
+    "[link to the GitHub repo](https://github.com/tnathu-ai/DataCo-SMART-SUPPLY-CHAIN-FOR-ANALYSIS)"
    ]
   },
   {
@@ -1098,22 +1100,6 @@
     "\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8feb33b4-4c44-45b1-a31a-37f0d99389c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "908b4856-5854-40dd-a8ed-9400411dced4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
